--- a/PaymentInterfaceProject/src/main/java/userinterface/Login.form
+++ b/PaymentInterfaceProject/src/main/java/userinterface/Login.form
@@ -114,15 +114,16 @@
         <Component class="javax.swing.JComboBox" name="roleCombo">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="8">
+              <StringArray count="9">
                 <StringItem index="0" value="User"/>
                 <StringItem index="1" value="System Admin"/>
-                <StringItem index="2" value="Travel Admin"/>
-                <StringItem index="3" value="Banking Admin"/>
-                <StringItem index="4" value="Movie Admin"/>
-                <StringItem index="5" value="Event Admin"/>
+                <StringItem index="2" value="Banking Admin"/>
+                <StringItem index="3" value="Bus Admin"/>
+                <StringItem index="4" value="Train Admin"/>
+                <StringItem index="5" value="Recharge Admin"/>
                 <StringItem index="6" value="Utilities Admin"/>
-                <StringItem index="7" value="Recharge Admin"/>
+                <StringItem index="7" value="Events Admin"/>
+                <StringItem index="8" value="Movie Admin"/>
               </StringArray>
             </Property>
           </Properties>
